--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "author": "Zohaib",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "paper": "^0.12.11"
+  },
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-optional-chaining": "^7.7.5",
@@ -26,7 +28,7 @@
     "fibers": "^4.0.1",
     "file-loader": "^5.0.2",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
     "sass": "^1.23.0",
     "sass-loader": "^8.0.0",
@@ -34,7 +36,7 @@
     "url-loader": "^3.0.0",
     "webpack": "^4.41.1",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2"
   }
 }
